css/style.css
/* Path: css\style.css */
body {
    background-color: #202124;
    overflow: hidden;
    user-select: none;
}

#bodylayout {
    color: #d6d6d7;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    line-height: 0;
    position: relative;
    left: 2em;
    opacity: 0;
    transition: opacity 2s ease;
}

#widgetalign {
    display: flex;
    align-items: end;
}

#timer-text {
    color: #d6d6d7;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    line-height: 0;
    position: relative;
}

#timer-text > h2 {
    font-size: 5.5em;
    position: relative;
    z-index: 1;
    top: 0.15em;
    left: 0.2em;
}

#timer-text > h3 {
    font-size: 4.5em;
    position: relative;
    z-index: 1;
    top: 0.15em;
    left: 0.25em;
}

#timer-bg {
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    background-color: #323639;
    text-align: center;
    z-index:0;
    position: absolute;
    height: 6.4em;
    width: 20em;
    top: 4.5em;
}

#timer-bg > div {
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    background-color: #d6d6d7;
    text-align: center;
    z-index:0;
    position: absolute;
    height: 6.4em;
    width: 0.5em;
    top: 0;
}

#weather-text {
    color: #d6d6d7;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    line-height: 0;
    position: relative;
}

#weather-text > h2 {
    font-size: 5.5em;
    position: relative;
    z-index: 1;
    top: 0.135em;
    left: 0.85em;
}

#weather-text > h3 {
    font-size: 4.5em;
    position: relative;
    z-index: 1;
    top: 0.145em;
    left: 1.04em;
}

#weather-bg {
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    background-color: #323639;
    text-align: center;
    z-index:0;
    position: absolute;
    height: 6.4em;
    width: 16.5em;
    top: 4.5em;
    left: 25em;
}

#weather-bg > div {
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    background-color: #d6d6d7;
    text-align: center;
    z-index:0;
    position: absolute;
    height: 6.4em;
    width: 0.5em;
    top: 0;
}



#searchbtn {
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    background-color: #323639;
    padding: 0.5em;
    height: 2.5em;
    position: relative;
    width: 2.5em;
    z-index: 1;
    transition: width 0.7s ease;
}

#searchbtn:hover {
    width: 30em;
}

#searchbtn:hover > img{
    opacity: 0.1;
}

#searchbar {
    opacity: 0;
    z-index: 0;
    position: absolute;
    top: 1em;
    left: 5em;
    transition: opacity 0.4s ease;    
}

#search {
    color: #d6d6d7;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 1.5em;
    position: relative;
    z-index: 1;
    border: 0;
    top: auto;
    bottom: auto;
    background-color: transparent;
}

#search:focus {
    outline: none;
}

#searchbtn:hover > #searchbar {
    opacity: 1;
}

.bookmarkcategory {
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    color: #d6d6d7;
    font-size: 1.5em;
    position: absolute;
    border: 0;
    width: 8em;
    height: 23em;
    top: -8.4em;
    left: 31em;
    background-color: #323639;
}

#top {
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    background-color: #d6d6d7;
    z-index:0;
    position: absolute;
    height: 0.5em;
    width: 100%;

}

.bookmarkcategory > div > h2 {
    font-size: 1.2em;
    position: relative;
    z-index: 1;
    text-align: center;
    top: 0.5em;
    margin-bottom: 0.5em;
}

.bookmarkcategory > div > ul {
    line-height: 1.5em;
    list-style-type: none;
    position: relative;
    z-index: 1;
    top: 0.5em;
    left: -1em;
    
}

.bookmarkcategory > div > ul > li > a {
    color: #d6d6d7;
    text-decoration: none;
    position: relative;
    z-index: 1;
    padding: 0.6em;
}

.bookmarkcategory > div > ul > li > a:hover {
    color: #d6d6d7;
    text-decoration: none;
    position: relative;
    z-index: 1;
    text-align: justify;
    font-size: 1.1em;
}

#dragable {
    position: absolute;
    z-index: 9;
    transition: border-color 0.2s, box-shadow 0.2s;
    }
    
    #dragable.drag {
    border-color: white;
    box-shadow: 3px 6px 24px rgba(0, 0, 0, 0.5);
    }
    
    #dragable #dragzone {
    cursor: grabbing;
    z-index: 10;
    }

#logo {
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    color: #d6d6d7;
    font-size: 1.5em;
    position: absolute;
    z-index: 1;
    border: 0;
    width: 5em;
    height: 5em;
    margin-right: auto;
    background-color: #323639;
}

#logo > div {
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    background-color: #d6d6d7;
    z-index:0;
    position: absolute;
    height: 100%;
    width: 0.5em;
}

#logo-text {
    position: absolute;
    z-index: 1;
    left: 0.2em;
    width: 5em;
    height: 5em;
}


#logo-text > h2 {
    font-size: 5em;
    position: absolute;
    left: 0.2em;
    top: -0.35em;
}

#logo-text > h3 {
    font-size: 2em;
    position: absolute;
    left: 0.5em;
    top: 1.89em;
}

#logobox {
    position: relative;
    width: 5em;
    height: 5em;
    opacity: 0;
    transition: opacity 1s ease;
    top: 30.4em;
    left: 0.2em;
}

#logodiv {
    position: absolute;
    z-index: 1;
    top: 24.4em;
    left: 0.2em;
}

#logobox:hover {
    opacity: 1;
}
#welcome {
    /* divider centered */
    position: absolute;
    z-index: 12;
    height: 100%;
    width: 100%;
    background-color: #202124;
    /* align text in center */
    display: flex;
    justify-content: center;
    align-items: center;

}

